--- a/monitoring/wazuh-manager/config/ossec.conf
+++ b/monitoring/wazuh-manager/config/ossec.conf
@@ -108,6 +108,16 @@
     <url port="443">https://www.debian.org/security/oval/oval-definitions-jessie.xml</url>
     <update_interval>1h</update_interval>
     </feed>
+    <feed name="debian-7">
+    <disabled>no</disabled>
+    <url port="443">https://www.debian.org/security/oval/oval-definitions-wheezy.xml</url>
+    <update_interval>1h</update_interval>
+    </feed>
+    <feed name="debian-9">
+    <disabled>no</disabled>
+    <url port="443">https://www.debian.org/security/oval/oval-definitions-stretch.xml</url>
+    <update_interval>1h</update_interval>
+    </feed>
   </wodle>
 
   <!-- File integrity monitoring -->
